<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="180dp">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        card_view:cardBackgroundColor="@android:color/white"
        card_view:cardCornerRadius="6dp"
        card_view:cardElevation="0dp"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:orientation="vertical"
            android:weightSum="5">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="5">

                <com.appsorama.blendtest.ui.textview.AutoFitTxtView
                    style="@style/TxtFoodItem"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:text="@string/txt_food_list_name" />

                <com.appsorama.blendtest.ui.textview.AutoFitTxtView
                    android:id="@+id/txt_list_item_name"
                    style="@style/TxtFoodItemDetail"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="5">

                <com.appsorama.blendtest.ui.textview.AutoFitTxtView
                    style="@style/TxtFoodItem"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:text="@string/txt_food_list_category" />

                <com.appsorama.blendtest.ui.textview.AutoFitTxtView
                    android:id="@+id/txt_list_item_category"
                    style="@style/TxtFoodItemDetail"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="5">

                <com.appsorama.blendtest.ui.textview.AutoFitTxtView
                    style="@style/TxtFoodItem"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:text="@string/txt_food_list_received" />

                <com.appsorama.blendtest.ui.textview.AutoFitTxtView
                    android:id="@+id/txt_list_item_received"
                    style="@style/TxtFoodItemDetail"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="5">

                <com.appsorama.blendtest.ui.textview.AutoFitTxtView
                    style="@style/TxtFoodItem"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:text="@string/txt_food_list_quantity" />

                <com.appsorama.blendtest.ui.textview.AutoFitTxtView
                    android:id="@+id/txt_list_item_quantity"
                    style="@style/TxtFoodItemDetail"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="5">

                <com.appsorama.blendtest.ui.textview.AutoFitTxtView
                    style="@style/TxtFoodItem"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:text="@string/txt_food_list_notes" />

                <com.appsorama.blendtest.ui.textview.AutoFitTxtView
                    android:id="@+id/txt_list_item_notes"
                    style="@style/TxtFoodItemDetail"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</FrameLayout>